--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -46,6 +46,10 @@
     border-color: #e7113a;
     color: white;
 }
+.btn-outline-dark{
+    border: 2px solid #000000 !important;
+    color: #000000 !important;
+}
 
 .btn-primary:hover,
 .btn-primary:focus,
@@ -55,7 +59,24 @@
     border-color: #c21b3a !important;
     box-shadow: none !important;
     /* Removes any Bootstrap hover/focus effects */
-    color: white;
+    color: white !important;
+}
+.font-38px{
+    font-size: 38px ;
+    font-weight: 800 ;
+    color: #1e293b ;
+}
+.font-25px{
+    font-size: 25px;
+    font-weight: 700;
+    color: #1e293b;
+}
+.font-18px{
+    font-size: 18px;
+}
+
+.btn-radius {
+    border-radius: 30px !important;
 }
 
 .text-primary {
@@ -206,7 +227,72 @@ a {
 .menu-toggle::after {
     display: none !important;
 }
+  
+    .breadcrumb-item a {
+       font-size: 13px;
+        color: #adb5bd;
+    }
+        .dashboard-card{
+            border-radius: 20px;
+            padding: 25px 0px !important;
+        }
+      
+        .dashboard-card .title-icon{
+            background-color: #c2bfbf9c;
+            color: #000000 !important;
+        }
 
+    .dashboard-card .icon {
+        width: 40px;
+        height: 40px;
+        font-size: 1.2rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+  
+    .dashboard-card img{
+        width: 32px;
+        height: 32px;
+    }
+    .dashboard-card .link-arrow{
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        border: 2px solid #aba8b1 ;
+    }
+    .dashboard-card .link-arrow a{
+        color: #aba8b1 !important;
+    }
+    .avatars-group {
+        display: flex;
+    }
+    .avatars-group img {
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        border: 2px solid #fff;
+        margin-left: -10px;
+        z-index: 1;
+    }
+    .avatars-group img:first-child {
+        margin-left: 0;
+    }
+     .avatars-group .user-count-icon {
+        width: 40px;
+        height: 40px;
+        background-color: #e0f0ff;
+        color: #000000;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 0.875rem;
+        margin-left: -10px;
+        border: 2px solid #fff;
+        z-index: 1;
+    }
+   
+    
 @media only screen and (min-width: 991px) {
     .header-menu .navbar-nav .nav-item .active::after {
         content: '';
@@ -235,7 +321,7 @@ a {
 }
 
 @media only screen and (max-width: 991px) {
-    .content-container {
+    .space-layout {
         margin-top: 100px !important;
     }
 
