--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -3,56 +3,67 @@
     src: url(../fonts/SFPRODISPLAYBOLD.OTF);
     font-style: normal;
 }
+
 @font-face {
     font-family: 'SF-BlackItalic';
     src: url(../fonts/SFPRODISPLAYBLACKITALIC.OTF);
     font-style: italic;
 }
+
 @font-face {
     font-family: 'SF-HeavyItalic';
     src: url(../fonts/SFPRODISPLAYHEAVYITALIC.OTF);
     font-style: italic;
 }
+
 @font-face {
     font-family: 'SF-LightItalic';
     src: url(../fonts/SFPRODISPLAYLIGHTITALIC.OTF);
     font-style: italic;
 }
+
 @font-face {
     font-family: 'SF-Medium';
     src: url(../fonts/SFPRODISPLAYMEDIUM.OTF);
     font-style: normal;
 }
+
 @font-face {
     font-family: 'SF-Regular';
     src: url(../fonts/SFPRODISPLAYREGULAR.OTF);
     font-style: normal;
 }
+
 @font-face {
     font-family: 'SF-SemiItalic';
     src: url(../fonts/SFPRODISPLAYSEMIBOLDITALIC.OTF);
     font-style: italic;
 }
+
 @font-face {
     font-family: 'SF-ThinItalic';
     src: url(../fonts/SFPRODISPLAYTHINITALIC.OTF);
     font-style: italic;
 }
+
 @font-face {
     font-family: 'SF-UltraItalic';
     src: url(../fonts/SFPRODISPLAYULTRALIGHTITALIC.OTF);
     font-style: italic;
 }
+
 @font-face {
     font-family: 'Outfit-Light';
     src: url(../fonts/OutfitLight1.ttf);
     font-style: normal;
 }
+
 @font-face {
     font-family: 'Outfit-Medium';
     src: url(../fonts/OutfitMedium.ttf);
     font-style: normal;
 }
+
 @font-face {
     font-family: 'Outfit-Regular';
     src: url(../fonts/OutfitRegular.ttf);
@@ -60,33 +71,44 @@
 }
 
 
-body{
-    font-family: 'SF-Bold';
+body {
+    font-family: 'SF-Medium';
 }
-.navbar .navbar-nav .nav-link{
+img{
+    max-width: 100%;
+}
+
+.navbar .navbar-nav .nav-link {
     font-family: 'SF-Medium';
     font-size: 16px;
     font-weight: normal;
 }
-.breadcrumb-item{
-    font-family: 'Outfit-Light'; 
+
+.breadcrumb-item {
+    font-family: 'Outfit-Light';
 }
-.font-38px{
-    font-size: 40px !important;
-    font-weight: 700 !important;
-    color: #1E293B !important;
+
+.font-40px {
+    font-size: 40px;
+    font-weight: 700;
+    color: #1E293B;
 }
-.font-25px{
+
+.font-26px {
     font-size: 26px;
     font-weight: 700;
     color: #1E293B;
 }
-.font-18px{
-    font-size: 16px;
-  columns: #94A3B8;
-    
+
+.font-18px {
+    font-size: 18px;
+    color: #94A3B8;
+    font-weight: 400;
+    font-family: 'SF-Regular';
+
 
 }
+
 .layout-wrapper {
     background-color: rgb(242, 245, 252) !important;
 }
@@ -131,11 +153,12 @@ body{
 }
 
 .btn-primary {
-    background-color: #e7113a;
+    background-color: #E7113A;
     border-color: #e7113a;
     color: white;
 }
-.btn-outline-dark{
+
+.btn-outline-dark {
     border: 2px solid #000000 !important;
     color: #000000 !important;
 }
@@ -147,7 +170,6 @@ body{
     background-color: #c21b3a !important;
     border-color: #c21b3a !important;
     box-shadow: none !important;
-    /* Removes any Bootstrap hover/focus effects */
     color: white !important;
 }
 
@@ -295,8 +317,9 @@ a {
     position: relative;
     font-weight: 800;
 }
+
 .navbar .navbar-nav .nav-item {
-    padding: 0px 18px !important;
+    padding: 0px 8px !important;
 }
 
 .header-menu .navbar-nav .nav-link:hover {
@@ -306,75 +329,81 @@ a {
 .menu-toggle::after {
     display: none !important;
 }
-  
-    .breadcrumb-item a {
-       font-size: 13px;
-        color: #adb5bd;
-    }
-        .dashboard-card{
-            border-radius: 20px;
-            padding: 25px 0px !important;
-        }
-      
-        .dashboard-card .title-icon{
-            background-color: #c2bfbf9c;
-            color: #000000 !important;
-        }
 
-    .dashboard-card .icon {
-        width: 40px;
-        height: 40px;
-        font-size: 1.2rem;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-  
-    .dashboard-card img{
-        width: 32px;
-        height: 32px;
-    }
-    .dashboard-card .link-arrow{
-        width: 40px;
-        height: 40px;
-        border-radius: 50%;
-        border: 2px solid #aba8b1 ;
-    }
-    .dashboard-card .link-arrow a{
-        color: #aba8b1 !important;
-    }
-    .avatars-group {
-        display: flex;
-    }
-    .avatars-group img {
-        width: 40px;
-        height: 40px;
-        border-radius: 50%;
-        border: 2px solid #fff;
-        margin-left: -10px;
-        z-index: 1;
-    }
-    .avatars-group img:first-child {
-        margin-left: 0;
-    }
-     .avatars-group .user-count-icon {
-        width: 40px;
-        height: 40px;
-        background-color: #e0f0ff;
-        color: #000000;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 0.875rem;
-        margin-left: -10px;
-        border: 2px solid #fff;
-        z-index: 1;
-    }
-    .navbar .navbar-search {
-       font-family: 'Outfit-Regular';
-    }
-   
-    
+.breadcrumb-item a {
+    font-size: 13px;
+    color: #adb5bd;
+}
+/* dashboard-card */
+
+.dashboard-card {
+    border-radius: 15px;
+    padding: 25px 0px !important;
+}
+
+.dashboard-card .title-icon {
+    background-color: #c2bfbf9c;
+    color: #000000 !important;
+}
+
+.dashboard-card .icon {
+    width: 40px;
+    height: 40px;
+    font-size: 1.2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.dashboard-card .link-arrow {
+    width: 40px;
+    height: 40px;
+
+}
+
+.dashboard-card .link-arrow a {
+    color: #aba8b1 !important;
+}
+.link-card .link-card-img{
+    height: 180px;
+}
+
+.avatars-group {
+    display: flex;
+}
+
+.avatars-group img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: 2px solid #fff;
+    margin-left: -10px;
+    z-index: 1;
+}
+
+.avatars-group img:first-child {
+    margin-left: 0;
+}
+
+.avatars-group .user-count-icon {
+    width: 40px;
+    height: 40px;
+    background-color: #e0f0ff;
+    color: #000000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 0.875rem;
+    margin-left: -10px;
+    border: 2px solid #fff;
+    z-index: 1;
+}
+
+.navbar .navbar-search {
+    font-family: 'Outfit-Regular';
+}
+
+
 @media only screen and (min-width: 991px) {
     .header-menu .navbar-nav .nav-item .active::after {
         content: '';
@@ -385,6 +414,7 @@ a {
         height: 2px;
         background-color: #e7113a;
     }
+
     .navbar {
         height: 90px;
     }
@@ -422,7 +452,3 @@ a {
         width: 90% !important;
     }
 }
-
-
-
-
