add login p[age done

--- a/assets/css/auth.css
+++ b/assets/css/auth.css
@@ -1,36 +1,45 @@
-.auth{
-    background-color: rgb(255, 255, 255);
-    margin: 50px 0px;
-}
-.auth .auth-img{
-    width: 250px;
 
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+.auth{
+    font-family: "Poppins", sans-serif;
+    overflow-x: hidden;
 }
 .auth label{
     color: black;
 }
-.auth .auth-form-title{
-    font-weight: 800;
-    margin-bottom: 40px;
+.auth .form-control:hover{
+    border: 2px solid #E7113A !important;
 }
+.auth p{
+    font-family: "Poppins", sans-serif;
+    color: #636060;
+    font-weight: 400;
+}
+.auth .site-img{
+    width: 200px;
+    height: 58px;
+}
+.auth label{
+   font-weight: 500;
+   font-size: 16px;
+}
+.auth .password-input{
+    padding-right: 40px;
+}
+
 .auth .auth-form-width{
-    width: 60%;
+    width: 80%;
 }
-.auth .carousel-title
-{
-    text-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+.auth .line-border{
+    border: 1px solid #E7113A;
+margin-bottom: 50px;
 }
-.auth .carousel-content
-{
-    text-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-}
-.auth .carousel-img{
-    border-radius: 10px;
+.auth .auth-btn{
+    margin-top: 60px !important;
 }
 @media only screen and (max-width: 768px) {
-    .auth .auth-form-width{
-        width: 100%;
-    }
+ 
 
 }
 @media only screen and (max-width: 576px) {
