--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -88,6 +88,12 @@ img{
     font-family: 'Outfit-Light';
 }
 
+.font-50px {
+    font-size: 50px;
+    font-weight: 600;
+    color: #000000;
+    line-height: 55px;
+}
 .font-40px {
     font-size: 40px;
     font-weight: 700;
@@ -445,10 +451,21 @@ a {
     .right-sidebar {
         width: 70% !important;
     }
+    .font-50px {
+        font-size: 40px;
+
+      
+    }
 }
 
 @media only screen and (max-width: 576px) {
     .right-sidebar {
         width: 90% !important;
+    }
+    .font-50px {
+        font-size: 30px;
+        line-height: 40px;
+       
+      
     }
 }
