--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -29,7 +29,6 @@
      font-weight: 800;
 }
 body {
-    font-family: 'poppins-medium';
     font-style: normal;
    
 }
@@ -38,8 +37,8 @@ img{
 }
 
 .navbar .navbar-nav .nav-link {
-       font-family: 'poppins-medium';
-    font-size: 16px;
+    font-family: 'poppins-medium';
+    font-size: 14px;
     font-weight: normal;
 }
 
@@ -264,11 +263,12 @@ a {
     color: #1e293b;
     font-weight: 500;
     font-size: 17px;
+    font-family: 'poppins-medium';
 }
 
 .menu-vertical .menu-item .menu-link {
     color: #FFFFFF;
-    font-size: 14px !important;
+    font-size: 12px !important;
      font-family: 'poppins-regular';
 }
 
@@ -279,11 +279,11 @@ a {
 .header-menu .navbar-nav .nav-item .active {
     color: #EF1938 !important;
     position: relative;
-    font-weight: 800;
+    font-family: 'poppins-bold';
 }
 
 .navbar .navbar-nav .nav-item {
-    padding: 0px 8px !important;
+    padding: 0px 12px !important;
 }
 
 .header-menu .navbar-nav .nav-link:hover {
@@ -364,7 +364,7 @@ a {
 }
 
 .navbar .navbar-search {
-    font-family: 'Outfit-Regular';
+    font-family: 'poppins-regular';
 }
 .menu-vertical{
     width: 250px !important;
