--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -63,6 +63,16 @@ img{
     font-size: 24px;
     color: #1E293B;
 }
+.font-20px {
+     font-family: 'poppins-bold';
+    font-size: 20px;
+    color: #1E293B;
+}
+.font-18px {
+     /* font-family: 'poppins-bold'; */
+    font-size: 18px;
+    color: #1E293B;
+}
 
 .font-15px {
     font-size: 15px;
@@ -396,6 +406,26 @@ a {
     .navbar {
         height: 90px;
     }
+}
+.board-card-header{
+    background-color: #20232a;
+    border-radius: 12px 12px 0px 0px;
+    margin-bottom: 20px;
+}
+.lead-no{
+    font-family: 'poppins-medium' !important;
+}
+.board-card-body{
+    background: none;
+    border: 1px solid #d0dce4;
+    padding: 25px 0px 0px 0px !important;
+}
+.board-card-body .title-icon{
+    padding: 0px !important;
+    height: 12px;
+    width:12px;
+    background-color: #e7113a;
+    
 }
 
 @media only screen and (min-width: 1200px) {
